2007-09-04 DavidAnderson <davea42@earthlink.net>
     * print_die.c (print_attribute): For DWARF4: DW_AT_high_pc:
       add qualifier to value when the value is an offset from
       DW_AT_low_pc (thus not itself a address).
       Update the address of the FSF.
     * print_frames.h DWARFDUMPCOPYRIGHT print_sections.c
       print_reloc.c dwarfdump.c tag_tree.c tag_attr.c
       esb.c esb.h makename.c acconfig.h dwconf.c makename.h
       dwconf.h globals.h print_frames.c:
       Update the address of the FSF.

2007-07-03 DavidAnderson <davea42@earthlink.net>
     * print_sections.c (dump_block): Removed superfluous return byte from
       printed characters. Removed unused variables.
     * print_die.c: A little refactoring for clarity.
     * globals.h: dwarfdump_print_one_locdesc() is now a 
       global-to-dwarfdump function.
     * print_frames.c: Now (with -v) prints dwarf expression bytes
       in frame expressions readably.
2007-07-02 DavidAnderson <davea42@earthlink.net>
     * dwarfdump.c: Add new -R option for 'generic' register sets.
     * dwarfdump.1: document -R, add new -x documentation.
     * dwconf.c: Set up -R configuration. Slight revision of
       register printing code.
     * dwconf.h: Interface to register name printing simplified.
     * print_frames.c: Use the simpler register name interface.
     * dwarfdump.conf: Add new 'generic' abi for up to 1000 registers.

2007-07-01 DavidAnderson <davea42@earthlink.net>
     * print_frames.c: For DW_CFA_def_cfa_sf & DW_CFA_def_cfa_offset_sf 
       print a computed data alignment factor.
2007-06-29 DavidAnderson <davea42@earthlink.net>
     * dwarfdump.1: Corrected spelling error.
2007-05-25 DavidAnderson <davea42@earthlink.net>
     * dwconf.h dwconf.c: Changed field name to 
       cf_named_regs_table_size as old name was less than clear.
     * dwarfdump.c: Call frame table setup with
       cf_table_entry_count not cf_named_regs_table_size. The newly